# varpath

./: .envrc  Cargo.toml  README.md  TODO.md  artifacts.json  changelog.rss  devshell.nix  flake.nix  index.html  justfile  package.nix  treefmt.nix
.github/workflows/: audit.yml  ci.yml  committed.yml  pre-commit.yml  release.yml  rust-next.yml  spelling.yml  web.yml
artifacts/: index.html
changelog/: index.html
lib/: default.nix
src/: environment.rs  lib.rs  main.rs  variable.rs  varpath.rs
src/variable/: complex.rs  simple.rs
