[package]
name = "varpath"
description = "TODO"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/adam-gaia/varpath"
repository = "https://github.com/adam-gaia/varpath"

[dependencies]
eyre = "0.6.12"
homedir = "0.3.3"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
thiserror = "1.0.64"
winnow = "0.6.18"

[dev-dependencies]
pretty_assertions = "1.4.1"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.19.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["x86_64-unknown-linux-gnu"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false
